--- a/chatbot.css
+++ b/chatbot.css
@@ -15,7 +15,7 @@ body {
 
 #chat-bot {
     background-color: #EBF9FF;
-    border-radius: 60px;
+    border-radius: 50px;
     padding-top: 300px !important;
     height: calc(100vh - 50px);
     overflow-y: auto; 
@@ -50,19 +50,26 @@ ul.cs-list {
     border-radius: 50px;
     padding: 10px 20px;
     margin: 0 15px 15px 0;
+    color: #000000;
     cursor: pointer;
 }
 
 .cs-list li:hover {
     background-color: #12609F;
+    color: #fff;
 }
 
-.cs-list li a {
+/* .cs-list li a {
     color: #000000;
 }
 
 .cs-list li:hover a {
     color: #fff;
+} */
+
+.cs-list li.disabled {
+    opacity: 0.5; /* Make the button look visually disabled */
+    cursor: no-drop;
 }
 
 .search-bar.input-group {
@@ -250,7 +257,7 @@ input.sr-btn {
 
 
 .chat-options {
-    margin: 10px 0;
+    margin: 10px 10px;
 }
 
 .chat-options label {
@@ -275,7 +282,7 @@ input.sr-btn {
 }
 
 #service-dropdown {
-    border-radius: 5px;
+    border-radius: 20px;
     padding: 10px;
     font-size: 14px;
 }
@@ -283,6 +290,7 @@ input.sr-btn {
 #service-submit-btn {
     margin-top: 10px;
     font-size: 14px;
+    border-radius: 20px;
 }
 
 /* User message (right-aligned) */
@@ -293,7 +301,7 @@ input.sr-btn {
     margin: 0px 0;
     max-width: 80%;
     align-self: flex-end;
-    text-align: right;
+    text-align: left;
 }
 
 
