--- a/chatbot.css
+++ b/chatbot.css
@@ -17,10 +17,11 @@ body {
     background-color: #EBF9FF;
     border-radius: 50px;
     padding-top: 300px !important;
-    height: calc(100vh - 50px);
+    height: calc(100vh - 32px);
     overflow-y: auto; 
     position: relative;
-    font-family: Outfit;   
+    font-family: Outfit; 
+    overflow-x: hidden;
 }
 
 .chat-bot {
@@ -49,7 +50,7 @@ ul.cs-list {
     border: 1px solid #85BEDC;
     border-radius: 50px;
     padding: 10px 20px;
-    margin: 0 15px 15px 0;
+    margin: 8px 15px 8px 0;
     color: #000000;
     cursor: pointer;
 }
@@ -102,81 +103,14 @@ input.sr-btn {
     border-radius: 50%;
     bottom: 0;
     margin: auto;
+    border: none;
+    background: none;
 }
 
 .send-btn i {
     color: #ccc;
     font-size: 20px;
 }
-
-@media (max-width: 1199px) {
-    .cb-img {
-        width: 70px;
-        height: 70px;
-    }
-}
-
-@media (max-width: 991px) {
-    .cb-img {
-        width: 60px;
-        height: 60px;
-    }
-}
-
-@media (max-width: 767px) {
-    .cb-img {
-        width: 45px;
-        height: 45px;
-    }
-}
-
-@media (max-width: 575px) {
-    .logo {
-        width:175px;
-    }
-    .chat-bot{
-        font-size: 13px;
-    }
-    .textarea-container textarea{
-        font-size: 13px;
-    }
-    
-    .cb-img {
-        width: 30px;
-        height: 30px;
-    }
-    .bot-img {
-        width: 25px;
-        height: 25px;
-    }
-    h2 {
-        font-size: 18px !important;
-    }
-    h5 {
-        font-size: 15px !important;
-    }
-    .cs-list li {
-        padding: 5px 15px;
-        margin: 0 12px 12px 0;
-    }
-    input.sr-btn {
-        height: 40px !important;
-        font-size: 15px;
-    }
-    .send-btn i {
-        font-size: 15px;
-    }
-    .send-btn {
-        right: 20px;
-    }
-    .cs-list li a {
-        font-size: 15px;
-    }
-    .search-bar.input-group {
-        padding: 10px;
-    }
-}
-
 
 /* new added css */
 
@@ -316,10 +250,10 @@ input.sr-btn {
 
 
 /* Scrollbar for main page (chat-bot container) */
-#chat-bot {
-    scrollbar-width: thin; /* For Firefox */
-    scrollbar-color: #2B90C2 #EBF9FF; /* For Firefox (thumb and track colors) */
-}
+/* #chat-bot { */
+    /* scrollbar-width: thin; For Firefox */
+    /* scrollbar-color: #2B90C2 #EBF9FF;  */
+/* } */
 
 /* Scrollbar styling for WebKit browsers (Chrome, Edge, Safari) */
 #chat-bot::-webkit-scrollbar {
@@ -327,42 +261,45 @@ input.sr-btn {
 }
 
 #chat-bot::-webkit-scrollbar-track {
-    background: #EBF9FF; /* Track color */
-    border-radius: 10px;
+    /* background: #EBF9FF; Track color */
+    /* border-radius: 15px; */
+    margin: 43px 0;
+    /* padding:20px; */
 }
 
 #chat-bot::-webkit-scrollbar-thumb {
-    background: #2B90C2; /* Thumb color */
-    border-radius: 10px;
+    background: #71b8db; /* Thumb color */
+    border-radius: 50px; /* Make the thumb rounded */
+    /* border: 2px solid #EBF9FF; */
 }
 
 #chat-bot::-webkit-scrollbar-thumb:hover {
-    background: #12609F; /* Thumb color on hover */
+    background: #187bcc; /* Thumb color on hover */
 }
 
 /* Scrollbar for textarea container */
-.textarea-container textarea {
-    scrollbar-width: thin; /* For Firefox */
-    scrollbar-color: #85BEDC #FFFFFF; /* Thumb and track colors */
-}
+/* .textarea-container textarea {
+    scrollbar-width: thin; 
+    scrollbar-color: #85BEDC #FFFFFF; 
+} */
 
 .textarea-container textarea::-webkit-scrollbar {
     width: 6px; /* Width of the scrollbar */
-    border-radius: 5px;
+    /* border-radius: 5px; */
 }
 
 .textarea-container textarea::-webkit-scrollbar-track {
-    background: #FFFFFF; /* Track color */
-    border-radius: 10px;
+    /* background: #FFFFFF;  */
+    margin: 10px 0;
 }
 
 .textarea-container textarea::-webkit-scrollbar-thumb {
-    background: #85BEDC; /* Thumb color */
-    border-radius: 10px;
+    background: #71b8db; /* Thumb color */
+    border-radius: 50px;
 }
 
 .textarea-container textarea::-webkit-scrollbar-thumb:hover {
-    background: #2B90C2; /* Thumb color on hover */
+    background: #187bcc; /* Thumb color on hover */
 }
 
 .typing-cursor {
@@ -418,7 +355,8 @@ input.sr-btn {
 .toast-container {
     position: fixed;
     bottom: 130px;
-    right: 20px;
+    left: 50%;
+    transform: translateX(-50%); 
     z-index: 1000;
 }
 
@@ -443,4 +381,83 @@ input.sr-btn {
 .toast-message.show {
     opacity: 1;
     transform: translateY(0);
+}
+
+.sticky-container {
+    position: sticky;
+    top: -58%;
+    z-index: 100;
+    background-color: #EBF9FF;
+    padding: 0px 18px;
+    border-radius: 10px;
+    box-shadow: 0 0px 2px rgba(0, 0, 0, 0.1);
+}
+
+@media (max-width: 1199px) {
+    .cb-img {
+        width: 70px;
+        height: 70px;
+    }
+}
+
+@media (max-width: 991px) {
+    .cb-img {
+        width: 60px;
+        height: 60px;
+    }
+}
+
+@media (max-width: 767px) {
+    .cb-img {
+        width: 45px;
+        height: 45px;
+    }
+}
+
+@media (max-width: 575px) {
+    .logo {
+        width:175px;
+    }
+    .toast-message, .chat-bot, .list-group{
+        font-size: 13px;
+    }
+    
+    .textarea-container textarea{
+        font-size: 13px;
+    }
+    
+    .cb-img {
+        width: 30px;
+        height: 30px;
+    }
+    .bot-img {
+        width: 25px;
+        height: 25px;
+    }
+    h2 {
+        font-size: 18px !important;
+    }
+    h5 {
+        font-size: 15px !important;
+    }
+    .cs-list li {
+        padding: 5px 15px;
+        margin: 0 12px 12px 0;
+    }
+    input.sr-btn {
+        height: 40px !important;
+        font-size: 15px;
+    }
+    .send-btn i {
+        font-size: 15px;
+    }
+    .send-btn {
+        right: 20px;
+    }
+    .cs-list li a {
+        font-size: 15px;
+    }
+    .search-bar.input-group {
+        padding: 10px;
+    }
 }
